<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorHeadingText"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <View
        android:id="@+id/border"
        android:layout_width="55dp"
        android:layout_height="3dp"
        android:background="@color/colorHeadingText"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="20dp"
        android:maxWidth="230dp"
        android:text="@string/welcome_message"
        android:textSize="14sp"
        android:lineSpacingExtra="2sp"
        app:layout_constraintTop_toBottomOf="@id/border"
        app:layout_constraintStart_toStartOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_ccp_background"
        android:elevation="2dp"
        android:padding="2dp"
        android:gravity="center"
        app:ccp_textSize="18sp"
        app:ccp_showNameCode="false"
        app:ccp_hintExampleNumber="false"
        app:ccpDialog_keyboardAutoPopup="false"
        app:ccp_autoDetectCountry="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <EditText
        android:id="@+id/user_number"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        android:background="@drawable/ic_ccp_edittext_background"
        android:elevation="2dp"
        android:textSize="18sp"
        android:textCursorDrawable="@drawable/ic_edittext_cursor"
        android:hint="@string/enter_number_hint"
        android:textColor="@color/colorEditText"
        android:textColorHint="@color/colorEditTextHint"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toEndOf="@id/ccp"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"
        android:itemBackground="@drawable/ic_otp_background"
        android:textColor="@color/colorEditText"
        android:cursorVisible="false"
        android:elevation="2dp"
        app:itemCount="6"
        app:viewType="rectangle"
        app:itemHeight="45dp"
        app:itemWidth="45dp"
        app:lineWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/ccp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/timer_default_text"
        android:textSize="18sp"
        android:textColor="@color/colorTimer"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@id/ccp"
        app:layout_constraintStart_toEndOf="@id/otp_view"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/btn_next"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSubmitBtn"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>