<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_otp_background"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/visitor_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_logo"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logged"
            android:textColor="@color/colorHeadingText"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/visitor_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorHeadingText"
            android:textSize="16sp"
            android:lineSpacingExtra="3dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/thanks_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/thanks"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSubmitBtn"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>